# crypto-breakout-screener

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.dev/: autonomous_dev.sh  autonomous_kill.sh
deploy/: Makefile  pd-tradebot-admin.service  pd-tradebot.service
doc/ai/task/: breakout-realistic-cost-timeout-2026-06-28.md  deep-research-report.md
docs/: CODEAGENT.md  README.md  breakout-operations.md
docs/ai/task/: IMG_2656.transcript.md  README.md  requirements-index.md  source-manifest.yaml  source-traceability.md
openspec/: config.yaml
openspec/changes/implement-breakout-backtesting-reporting/: tasks.md
openspec/changes/implement-breakout-entry-risk-fakes/: proposal.md  tasks.md
openspec/changes/implement-breakout-foundation/: README.md  tasks.md
openspec/changes/implement-breakout-ops-security-docs/: README.md  proposal.md  tasks.md
openspec/changes/implement-breakout-persistence-audit/: tasks.md
src/app/: __main__.py
src/core/: config.py  enums.py  env.py  exchange_info.py  logger.py  models.py  schemas.py  utils.py
src/database/: __init__.py  database.py  models.py  repositories.py
src/web/: __init__.py  __main__.py  auth.py  routes.py  schemas.py  templates.py
tests/: conftest.py  test_breakout_backtesting_reporting.py  test_breakout_entry_risk_fakes.py  test_breakout_foundation.py  test_breakout_ops_security_docs.py  test_breakout_persistence_audit.py  test_crypto_batch_experiment.py  test_crypto_historical_experiment.py  test_realistic_cost_profile_search.py
tests/fixtures/: btcusdt_m15.csv
(+348 files in other folders)
